--- a/games/css/02_style.css
+++ b/games/css/02_style.css
@@ -2,13 +2,13 @@ html, body {
   margin: 0;
   padding: 0;
   background: #faf8ef;
-  color: #776E65;
+  color: #776e65;
   font-family: "Clear Sans", "Helvetica Neue", Arial, sans-serif;
   font-size: 18px;
 }
 
 body {
-  margin: 80px 0;
+  margin: 20px 0;  
 }
 
 .heading:after {
@@ -25,31 +25,34 @@ h1.title {
   float: left;
 }
 
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes move-up {
   0% {
     top: 25px;
     opacity: 1;
   }
+
   100% {
     top: -50px;
     opacity: 0;
   }
 }
-@-moz-keyframes $animation-name {
+@-moz-keyframes move-up {
   0% {
     top: 25px;
     opacity: 1;
   }
+
   100% {
     top: -50px;
     opacity: 0;
   }
 }
-@keyframes $animation-name {
+@keyframes move-up {
   0% {
     top: 25px;
     opacity: 1;
   }
+
   100% {
     top: -50px;
     opacity: 0;
@@ -102,7 +105,7 @@ p {
 }
 
 a {
-  color: #776E65;
+  color: #776e65;
   font-weight: bold;
   text-decoration: underline;
   cursor: pointer;
@@ -124,32 +127,35 @@ hr {
   margin: 0 auto;
 }
 
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes fade-in {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
 }
-@-moz-keyframes $animation-name {
+@-moz-keyframes fade-in {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
 }
-@keyframes $animation-name {
+@keyframes fade-in {
   0% {
     opacity: 0;
   }
+
   100% {
     opacity: 1;
   }
 }
 .game-container {
-  margin-top: 40px;
+  margin-top: 10px;
   position: relative;
   padding: 15px;
   cursor: default;
@@ -346,29 +352,29 @@ hr {
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
 }
 .tile.tile-4 {
-  background: #eee1c9;
+  background: #ede0c8;
   box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0), inset 0 0 0 1px rgba(255, 255, 255, 0);
 }
 .tile.tile-8 {
   color: #f9f6f2;
-  background: #f3b27a;
+  background: #f2b179;
 }
 .tile.tile-16 {
   color: #f9f6f2;
-  background: #f69664;
+  background: #f59563;
 }
 .tile.tile-32 {
   color: #f9f6f2;
-  background: #f77c5f;
+  background: #f67c5f;
 }
 .tile.tile-64 {
   color: #f9f6f2;
-  background: #f75f3b;
+  background: #f65e3b;
 }
 .tile.tile-128 {
   color: #f9f6f2;
-  background: #edd073;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2380952381), inset 0 0 0 1px rgba(255, 255, 255, 0.1428571429);
+  background: #edcf72;
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.2381), inset 0 0 0 1px rgba(255, 255, 255, 0.14286);
   font-size: 45px;
 }
 @media screen and (max-width: 480px) {
@@ -378,8 +384,8 @@ hr {
 }
 .tile.tile-256 {
   color: #f9f6f2;
-  background: #edcc62;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.3174603175), inset 0 0 0 1px rgba(255, 255, 255, 0.1904761905);
+  background: #edcc61;
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.31746), inset 0 0 0 1px rgba(255, 255, 255, 0.19048);
   font-size: 45px;
 }
 @media screen and (max-width: 480px) {
@@ -389,8 +395,8 @@ hr {
 }
 .tile.tile-512 {
   color: #f9f6f2;
-  background: #edc950;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.3968253968), inset 0 0 0 1px rgba(255, 255, 255, 0.2380952381);
+  background: #edc850;
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.39683), inset 0 0 0 1px rgba(255, 255, 255, 0.2381);
   font-size: 45px;
 }
 @media screen and (max-width: 480px) {
@@ -401,7 +407,7 @@ hr {
 .tile.tile-1024 {
   color: #f9f6f2;
   background: #edc53f;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.4761904762), inset 0 0 0 1px rgba(255, 255, 255, 0.2857142857);
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.47619), inset 0 0 0 1px rgba(255, 255, 255, 0.28571);
   font-size: 35px;
 }
 @media screen and (max-width: 480px) {
@@ -412,7 +418,7 @@ hr {
 .tile.tile-2048 {
   color: #f9f6f2;
   background: #edc22e;
-  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.5555555556), inset 0 0 0 1px rgba(255, 255, 255, 0.3333333333);
+  box-shadow: 0 0 30px 10px rgba(243, 215, 116, 0.55556), inset 0 0 0 1px rgba(255, 255, 255, 0.33333);
   font-size: 35px;
 }
 @media screen and (max-width: 480px) {
@@ -421,36 +427,39 @@ hr {
   }
 }
 
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
   }
 }
-@-moz-keyframes $animation-name {
+@-moz-keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
   }
 }
-@keyframes $animation-name {
+@keyframes appear {
   0% {
     opacity: 0;
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
   }
+
   100% {
     opacity: 1;
     -webkit-transform: scale(1);
@@ -464,43 +473,49 @@ hr {
   -moz-animation-fill-mode: both;
 }
 
-@-webkit-keyframes $animation-name {
+@-webkit-keyframes pop {
   0% {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
   }
+
   50% {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
   }
+
   100% {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
   }
 }
-@-moz-keyframes $animation-name {
+@-moz-keyframes pop {
   0% {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
   }
+
   50% {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
   }
+
   100% {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
   }
 }
-@keyframes $animation-name {
+@keyframes pop {
   0% {
     -webkit-transform: scale(0);
     -moz-transform: scale(0);
   }
+
   50% {
     -webkit-transform: scale(1.2);
     -moz-transform: scale(1.2);
   }
+
   100% {
     -webkit-transform: scale(1);
     -moz-transform: scale(1);
@@ -552,15 +567,15 @@ hr {
   .game-container {
     margin-top: 40px;
     position: relative;
-    padding: 15px;
+    padding: 10px;
     cursor: default;
     -webkit-touch-callout: none;
     -webkit-user-select: none;
     -moz-user-select: none;
     background: #bbada0;
     border-radius: 6px;
-    width: 500px;
-    height: 500px;
+    width: 280px;
+    height: 280px;
     -webkit-box-sizing: border-box;
     -moz-box-sizing: border-box;
     box-sizing: border-box;
@@ -616,7 +631,7 @@ hr {
   }
 
   .grid-row {
-    margin-bottom: 15px;
+    margin-bottom: 10px;
   }
   .grid-row:last-child {
     margin-bottom: 0;
@@ -628,9 +643,9 @@ hr {
   }
 
   .grid-cell {
-    width: 106.25px;
-    height: 106.25px;
-    margin-right: 15px;
+    width: 57.5px;
+    height: 57.5px;
+    margin-right: 10px;
     float: left;
     border-radius: 3px;
     background: rgba(238, 228, 218, 0.35);
@@ -645,9 +660,9 @@ hr {
   }
 
   .tile {
-    width: 106.25px;
-    height: 106.25px;
-    line-height: 116.25px;
+    width: 57.5px;
+    height: 57.5px;
+    line-height: 67.5px;
   }
   .tile.tile-position-1-1 {
     position: absolute;
@@ -657,77 +672,77 @@ hr {
   .tile.tile-position-1-2 {
     position: absolute;
     left: 0px;
-    top: 121px;
+    top: 68px;
   }
   .tile.tile-position-1-3 {
     position: absolute;
     left: 0px;
-    top: 243px;
+    top: 135px;
   }
   .tile.tile-position-1-4 {
     position: absolute;
     left: 0px;
-    top: 364px;
+    top: 203px;
   }
   .tile.tile-position-2-1 {
     position: absolute;
-    left: 121px;
+    left: 68px;
     top: 0px;
   }
   .tile.tile-position-2-2 {
     position: absolute;
-    left: 121px;
-    top: 121px;
+    left: 68px;
+    top: 68px;
   }
   .tile.tile-position-2-3 {
     position: absolute;
-    left: 121px;
-    top: 243px;
+    left: 68px;
+    top: 135px;
   }
   .tile.tile-position-2-4 {
     position: absolute;
-    left: 121px;
-    top: 364px;
+    left: 68px;
+    top: 203px;
   }
   .tile.tile-position-3-1 {
     position: absolute;
-    left: 243px;
+    left: 135px;
     top: 0px;
   }
   .tile.tile-position-3-2 {
     position: absolute;
-    left: 243px;
-    top: 121px;
+    left: 135px;
+    top: 68px;
   }
   .tile.tile-position-3-3 {
     position: absolute;
-    left: 243px;
-    top: 243px;
+    left: 135px;
+    top: 135px;
   }
   .tile.tile-position-3-4 {
     position: absolute;
-    left: 243px;
-    top: 364px;
+    left: 135px;
+    top: 203px;
   }
   .tile.tile-position-4-1 {
     position: absolute;
-    left: 364px;
+    left: 203px;
     top: 0px;
   }
   .tile.tile-position-4-2 {
     position: absolute;
-    left: 364px;
-    top: 121px;
+    left: 203px;
+    top: 68px;
   }
   .tile.tile-position-4-3 {
     position: absolute;
-    left: 364px;
-    top: 243px;
+    left: 203px;
+    top: 135px;
   }
   .tile.tile-position-4-4 {
     position: absolute;
-    left: 364px;
-    top: 364px;
+    left: 203px;
+    top: 203px;
   }
 
   .game-container {
@@ -747,4 +762,3 @@ hr {
   .game-message .lower {
     margin-top: 30px !important;
   }
-}
