--- a/games/css/02_style.css
+++ b/games/css/02_style.css
@@ -1,89 +1,90 @@
-*{
-  box-sizing: border-box;
-  padding: 0;
-  margin: 0;
-  font-family: arial;
-  color: #333;
-}
-#can{
-  border: 1px solid;
-}
-body{
-  overflow: hidden;
-}
-
-.pallet {
-    position: absolute;
-    top: 0;
-    left: 2px;
-    width: auto;
-    height: auto;
-}
-
-.pallet div, #white {
-  height: 3rem;
-  width: 3rem;
-  position: relative;
-  float:left;
-  border: .4rem solid #ccc;
-  cursor: pointer;
-}
-
-.pallet div.active{
-  border-color: #666;
-}
-
-#white{
-  background: #fff  
-}
-
-#green {
-  background: #4caf50;  
-}
-
-#blue {
-  background: #2196f3;  
-}
-
-#red {
-  background: #f44336;  
-}
-
-#yellow {
-  background: #ffeb3b;  
-}
-
-#orange {
-  background: #ff9800;  
-}
-
-#brown {
-  background: #795548;  
-}
-
-#purple {
-  background: #9c27b0;
-}
-
-#black {
-  background: #000;
-}
-
-#clr{
+.general-container {
   position: absolute;
-  top: 4rem;
-  left: 2px;
-  border: none;
-  outline: none;
-  background: #333;
-  color: #fff;
-  padding: .5rem 1rem;
-  font-size: 1rem;
-  cursor: pointer;
+  top: 50%;
+  left: 50%;
+  transform: translate(-50%, -50%);
 }
 
-#brush_width{
-  position: relative;
-  top:1.7rem;
-  left:-4rem;
+.shadow {
+  position: absolute;
+  left: 20px;
+  bottom: 10px;
+  width: 100px;
+  height: 30px;
+  background-color: rgba(0, 0, 0, 0.3);
+  border-radius: 50%;
+  animation: boingShadow 1s ease-in-out infinite alternate;
+}
+
+.egg {
+  margin: 20px;
+  width: 100px;
+  height: 125px;
+  background-color: #faf3c0;
+  border: 1px solid #000;
+  border-top-left-radius: 50% 60%;
+  border-top-right-radius: 50% 60%;
+  border-bottom-left-radius: 50% 40%;
+  border-bottom-right-radius: 50% 40%;
+  transform-origin: center bottom;
+  animation: boing 1s ease-in-out infinite alternate;
+  box-shadow: inset -5px -10px rgba(168, 164, 176, 0.5);
+}
+
+.spots {
+  position: absolute;
+  left: 30px;
+  top: 20px;
+  height: 15px;
+  width: 10px;
+  background-color: #a8a4b0;
+  border-top-left-radius: 60% 60%;
+  border-top-right-radius: 40% 40%;
+  border-bottom-left-radius: 40% 40%;
+  border-bottom-right-radius: 60% 60%;
+}
+.spots:before {
+  position: absolute;
+  left: -10px;
+  top: 16px;
+  content: '';
+  display: block;
+  height: 13px;
+  width: 7px;
+  background-color: #a8a4b0;
+  border-top-left-radius: 60% 60%;
+  border-top-right-radius: 40% 40%;
+  border-bottom-left-radius: 40% 40%;
+  border-bottom-right-radius: 60% 60%;
+}
+.spots:after {
+  position: absolute;
+  left: 0px;
+  top: 25px;
+  content: '';
+  display: block;
+  height: 10px;
+  width: 5px;
+  background-color: #a8a4b0;
+  border-top-left-radius: 60% 60%;
+  border-top-right-radius: 40% 40%;
+  border-bottom-left-radius: 40% 40%;
+  border-bottom-right-radius: 60% 60%;
+}
+
+@keyframes boing {
+  from {
+    transform: scale(1, 1) translateY(-20px);
+  }
+  to {
+    transform: scale(1.2, 0.8) translateY(0px);
+  }
+}
+@keyframes boingShadow {
+  from {
+    transform: scale(0.9, 1);
+  }
+  to {
+    transform: scale(1.2, 0.8);
+  }
 }
